--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "virtua": "^0.16.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
